--- a/views/component/header.hbs
+++ b/views/component/header.hbs
@@ -161,7 +161,7 @@
                                                             <div class="nav-column">
                                                                 <h3 class="orange">Resources</h3>
                                                                 <ul>
-                                                                    <li><a href="#"><i
+                                                                    <li><a href="{{url '/docs'}}"><i
                                                                             class="fa fa-hand-paper m-icon-color"></i><span
                                                                             class="m-text">Documentation</span></a></li>
                                                                     <li><a href="#"><i
