--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,10 +2,14 @@
 <html>
 <head>
     <title>{{title}}</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='/stylesheets/fontawesome-all.min.css'/>
     <link rel='stylesheet' href='/stylesheets/grid.css'/>
+    <link rel='stylesheet' href='/stylesheets/main.css'/>
     <link rel='stylesheet' href='/stylesheets/app.css'/>
 </head>
 <body class="lia-qanda lia-user-status-anonymous QandAQuestionPage lia-body">
