--- a/views/component/header.hbs
+++ b/views/component/header.hbs
@@ -16,7 +16,7 @@
                             <div class="atl-navigation-wrapper">
                                 <div class="atl-navigation">
                                     <div class="atl-navigation__masthead">
-                                        <a href="/" class="atl-community-logo"
+                                        <a href="{{url '/'}}" class="atl-community-logo"
                                            data-ga-category="Utility Navigation Interactions"
                                            data-ga-action="Atlassian Community Logo">
                                             <svg xmlns="http://www.w3.org/2000/svg"
