--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -10,3 +10,43 @@ a
   padding: 7px
   background: #0052CC
   border-radius: 50%
+
+.icon-box-username-container input
+  padding: 5px 20px 5px 5px
+
+.icon-box-username-container:after
+  background: white url(../images/single-01.svg) right no-repeat
+  margin-left: -25px
+  margin-right: 25px
+
+.icon-box-password-container input
+  padding: 5px 20px 5px 5px
+
+.icon-box-password-container:after
+  background: white url(../images/single-01.svg) right no-repeat
+  margin-left: -25px
+  margin-right: 25px
+
+.username-box
+  background: url(../images/single-01.svg) no-repeat 6px
+  border: 1px solid #DADADA
+  margin-top: 10px
+  padding-left: 35px
+
+.password-box
+  background: url(../images/single-01.svg) no-repeat 6px
+  border: 1px solid #DADADA
+  margin-top: 10px
+  padding-left: 35px
+
+.full-per
+  max-width: unset !important
+
+.padding30
+  padding: 30px
+
+.pad10
+  padding: 10px
+
+.per100
+  width: 100%
