--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Atlas | Developer </title>
+    <title>{{translation.APP_NAME}} | Developer </title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
