--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1850,3 +1850,36 @@ article a.ak-button-primary:focus, article span.ak-button-primary a:focus, artic
 .blog-posts .blog-read-more:focus {
     outline: none !important
 }
+
+.inputWithIcon input[type=text],.inputWithIcon input[type=password]{
+    padding-left:40px;
+}
+
+.inputWithIcon{
+    position:relative;
+}
+
+.inputWithIcon i{
+    position:absolute;
+    left:0;
+    top:8px;
+    padding:9px 8px;
+    color:#aaa;
+    transition:.3s;
+}
+
+.inputWithIcon input[type=text]:focus + i,.inputWithIcon input[type=password]:focus + i{
+    color:#0052CC;
+}
+
+.inputWithIcon.inputIconBg i{
+    background-color:#aaa;
+    color:#fff;
+    padding:9px 4px;
+    border-radius:4px 0 0 4px;
+}
+
+.inputWithIcon.inputIconBg input[type=text]:focus + i,.inputWithIcon.inputIconBg input[type=password]:focus + i{
+    color:#fff;
+    background-color:#0052CC;
+}
