--- a/views/docs.hbs
+++ b/views/docs.hbs
@@ -23,7 +23,7 @@
                         class="confluence-embedded-file-wrapper confluence-embedded-manual-size conf-macro output-inline">
                     <img width="50"
                          class="confluence-embedded-image"
-                         src="{{url '/images/single-folded-content.svg'}}"></span>
+                         src="{{url '/images/preferences.svg'}}"></span>
                     <div class="tile-details">
                         <h3 id="AtlassianDocumentation-Developers">Developers</h3>
                         <p><span>Find API documentation and guides for developing apps and integrations.</span></p>
