--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
     {{{body}}}
 </div>
 <script src="/javascripts/jq.js"></script>
-<script src="/javascripts/menu.js"></script>
+<script src="/javascripts/eventSource.js"></script>
 <script src="/javascripts/app.js"></script>
 </body>
 </html>
