--- a/views/docs.hbs
+++ b/views/docs.hbs
@@ -23,7 +23,7 @@
                         class="confluence-embedded-file-wrapper confluence-embedded-manual-size conf-macro output-inline">
                     <img width="50"
                          class="confluence-embedded-image"
-                         src="{{url '/images/preferences.svg'}}"></span>
+                         src="{{url '/asset/images/preferences.svg'}}"></span>
                     <div class="tile-details">
                         <h3 id="AtlassianDocumentation-Developers">Developers</h3>
                         <p><span>Find API documentation and guides for developing apps and integrations.</span></p>
@@ -37,7 +37,7 @@
                 <a href="/"
                    class="home-page-other-documentation-tile"><span
                         class="confluence-embedded-file-wrapper confluence-embedded-manual-size conf-macro output-inline">
-                    <img width="50" class="confluence-embedded-image" src="{{url '/images/single-folded-content.svg'}}"></span>
+                    <img width="50" class="confluence-embedded-image" src="{{url '/asset/images/single-folded-content.svg'}}"></span>
                     <div class="tile-details">
                         <h3 id="AtlassianDocumentation-Enterprise">Enterprise</h3>
                         <p><span>Learn about Atlassian Enterprise and its Data Center products.</span></p>
