--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,12 +2,13 @@
 <div>
     <div class="atl-widget atl-widget--house-ad adg-card--p2 col-md-26 col-md-offset-37" style="margin-top: 8%">
         <form class="component-inline-login-form padding30" action="{{url '/login'}}" method="post">
+
             <div class="inputWithIcon pad10">
-                <input type="text" class="full-per" placeholder="Username or Email">
+                <input type="text" name="username" class="full-per" placeholder="Username or Email">
             </div>
 
             <div class="inputWithIcon pad10">
-                <input type="password" class="full-per" placeholder="Password">
+                <input type="password" name="password" class="full-per" placeholder="Password">
             </div>
 
             <div class="pad10">
