--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,3 @@
-
 @media only screen and (max-width: 360px) {
     .home-page {
         display: -webkit-box;
@@ -1851,35 +1850,45 @@ article a.ak-button-primary:focus, article span.ak-button-primary a:focus, artic
     outline: none !important
 }
 
-.inputWithIcon input[type=text],.inputWithIcon input[type=password]{
-    padding-left:40px;
+.inputWithIcon input[type=text], .inputWithIcon input[type=password] {
+    padding-left: 40px;
 }
 
-.inputWithIcon{
-    position:relative;
+.inputWithIcon {
+    position: relative;
 }
 
-.inputWithIcon i{
-    position:absolute;
-    left:0;
-    top:8px;
-    padding:9px 8px;
-    color:#aaa;
-    transition:.3s;
+.inputWithIcon i {
+    position: absolute;
+    left: 0;
+    top: 8px;
+    padding: 9px 8px;
+    color: #aaa;
+    transition: .3s;
 }
 
-.inputWithIcon input[type=text]:focus + i,.inputWithIcon input[type=password]:focus + i{
-    color:#0052CC;
+.inputWithIcon input[type=text]:focus + i, .inputWithIcon input[type=password]:focus + i {
+    color: #0052CC;
 }
 
-.inputWithIcon.inputIconBg i{
-    background-color:#aaa;
-    color:#fff;
-    padding:9px 4px;
-    border-radius:4px 0 0 4px;
+.inputWithIcon.inputIconBg i {
+    background-color: #aaa;
+    color: #fff;
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
 }
 
-.inputWithIcon.inputIconBg input[type=text]:focus + i,.inputWithIcon.inputIconBg input[type=password]:focus + i{
-    color:#fff;
-    background-color:#0052CC;
+.inputWithIcon.inputIconBg input[type=text]:focus + i, .inputWithIcon.inputIconBg input[type=password]:focus + i {
+    color: #fff;
+    background-color: #0052CC;
+}
+
+.avatar {
+    width: 32px;
+    height: 32px;
+}
+
+
+.white {
+    color: #fff;
 }
