--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,63 @@
 {{> header}}
+<md-content flex>
+    <div class="container pad10">
+        <div class="atl-homepage-collections-products adg-card--p2">
+            <h3>Atlassian products</h3>
+            <ul class="atl-collection-directory__list atl-collection-directory__list--homepage-products">
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
 
-{{> simp}}
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="/t5/Jira/ct-p/jira" class="adg-flag adg-u-mb2">
+                        <i class="fa fa-server m-icon-color"></i><span class="m-text">Jira</span>
+                    </a>
+                </li>
+            </ul>
+            <a href="https://community.atlassian.com/t5/Products/ct-p/products"
+               data-ga-category="Collection Filter Interactions" data-ga-action="See All Products"> See all </a></div>
+    </div>
+</md-content>
