--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,6 +3,8 @@
     <div class="atl-widget atl-widget--house-ad adg-card--p2 col-md-26 col-md-offset-37" style="margin-top: 8%">
         <form class="component-inline-login-form padding30" action="{{url '/login'}}" method="post">
 
+            <input type="hidden" name="next" value="{{req.query.next}}">
+
             <div class="inputWithIcon pad10">
                 <input type="text" name="username" class="full-per" placeholder="Username or Email">
             </div>
@@ -12,7 +14,9 @@
             </div>
 
             <div class="pad10">
-                <button class="adg-button--cta-yellow per100 " id="atlcommNavLink-register"> Sign in</button>
+                <md-button type="submit" md-colors="{'background' :'{#colorPalette#}'}" class="per100"
+                           id="atlcommNavLink-register"> Sign in
+                </md-button>
             </div>
         </form>
     </div>
